added workflow with docker build

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,21 @@
-FROM node:18-alpine
+FROM node:18-alpine as build
 
 WORKDIR /app
 
-COPY public/ /react-docker-example/public
-COPY src/ /react-docker-example/src
-COPY package.json /react-docker-example/
+COPY . /app
 
 RUN npm install
 
-EXPOSE 3000
+RUN npm run build
 
-CMD ["npm", "start"]
+# Stage 2: Serve with a lightweight server
+FROM nginx:alpine
+
+# Copy built files from the previous stage to the nginx container
+COPY --from=build /app/build /usr/share/nginx/html
+
+# Expose port 80 to serve the app
+EXPOSE 80
+
+# Start nginx server
+CMD ["nginx", "-g", "daemon off;"]
